--- a/app/src/main/res/layout/app_bar_menu.xml
+++ b/app/src/main/res/layout/app_bar_menu.xml
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_navigation_driver" />
+    <include layout="@layout/content_menu" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
