--- a/app/src/main/res/anim/activity_in.xml
+++ b/app/src/main/res/anim/activity_in.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator = "@android:interpolator/linear"
-    android:fromYDelta="-100%p"
-    android:toYDelta="0"
-    android:duration = "1000">
+<set
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</translate>
+    <alpha
+        android:delay="1000"
+        android:fromAlpha="0"
+        android:toAlpha="1"
+        android:duration="3000"/>
+
+    <translate
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:interpolator/linear"
+        android:fromYDelta="-100%p"
+        android:toYDelta="0"
+        android:duration="1000">
+
+    </translate>
+
+</set>
