add interface interaction

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,22 +1,80 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.levup.simpleplayer.views.fragments.MainFragment">
+    tools:context="com.example.java.simpleplayer.views.fragments.MainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tv"
+    <android.support.v4.view.ViewPager
+        android:layout_above="@+id/playerView"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
+        <android.support.v4.view.PagerTabStrip
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"/>
 
-    <Button
-        android:layout_gravity="center"
-        android:text="PRESS ME"
-        android:id="@+id/btn"
+    </android.support.v4.view.ViewPager>
+
+    <RelativeLayout
+        android:layout_alignParentBottom="true"
+        android:id="@id/playerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="68dp">
 
-</FrameLayout>
+        <ImageView
+            android:layout_above="@+id/sb"
+            android:src="@android:color/darker_gray"
+            android:layout_marginStart="9dp"
+            android:layout_marginLeft="9dp"
+            android:layout_marginRight="9dp"
+            android:layout_marginEnd="9dp"
+            android:id="@+id/ivCover"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+        <TextView
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginTop="9dp"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            tools:text="Artist"
+            android:id="@+id/tvArtist"
+            android:layout_toRightOf="@id/ivCover"
+            android:layout_toEndOf="@id/ivCover"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginTop="4dp"
+            tools:text="song"
+            android:layout_toRightOf="@id/ivCover"
+            android:layout_toEndOf="@id/ivCover"
+            android:layout_below="@id/tvArtist"
+            android:id="@+id/tvSong"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <SeekBar
+            android:progress="50"
+            android:id="@id/sb"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:src="@android:drawable/ic_media_play"
+            android:id="@+id/btnPlay"
+            android:layout_marginEnd="9dp"
+            android:layout_marginRight="9dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
