--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.java.simpleplayer.views.fragments.MainFragment">
@@ -35,6 +36,8 @@
             android:layout_height="50dp" />
 
         <TextView
+            android:layout_toLeftOf="@+id/btnPlay"
+            android:layout_toStartOf="@+id/btnPlay"
             android:ellipsize="end"
             android:maxLines="1"
             android:layout_marginTop="9dp"
@@ -49,6 +52,8 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_toLeftOf="@+id/btnPlay"
+            android:layout_toStartOf="@+id/btnPlay"
             android:ellipsize="end"
             android:maxLines="1"
             android:layout_marginTop="4dp"
@@ -61,17 +66,21 @@
             android:layout_height="wrap_content" />
 
         <SeekBar
-            android:progress="50"
+            android:progress="100"
             android:id="@id/sb"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <ImageView
-            android:src="@android:drawable/ic_media_play"
+            android:layout_above="@+id/sb"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/ic_play_pause"
             android:id="@+id/btnPlay"
-            android:layout_marginEnd="9dp"
-            android:layout_marginRight="9dp"
+            android:layout_marginEnd="18dp"
+            android:layout_marginRight="18dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
