--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -1,6 +1,9 @@
 <android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layoutManager="LinearLayoutManager"
+    android:orientation="vertical"
     android:id="@+id/rv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
